Fixed placeholder display bug on mobile and modified main nav to add home

--- a/src/components/TempLandingPage/index.module.css
+++ b/src/components/TempLandingPage/index.module.css
@@ -107,7 +107,11 @@
 
 @media only screen and (max-width: 470px) {
   .nav_bar a {
-    padding: 8px 8px;
+    padding: 10px 10px;
     font-size: 14px;
+  }
+  .content h1 {
+    /* padding-top: 30px; */
+    font-size: 45px;
   }
 }
